added more data and images. Added a header. Now waiting for the database to be available before populating.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,9 +5,19 @@
 <title>DaleCo Inventory</title>
 </head>
 <body>
-Welcome to DaleCo
+<img src="images/header.png" />
+
 <div>
 	<A href="inventory.jsp">Inventory</A>
+</div>
+<div>
+	<A href="inventory.jsp">Staff Directory</A>
+</div>
+<div>
+	<A href="inventory.jsp">Company Calendar</A>
+</div>
+<div>
+	<A href="inventory.jsp">Policy and Handbook</A>
 </div>
 </body>
 </html>
